syntax="proto3";

package SFU;

option go_package="api/proto/";

enum SdpType {
    OFFER = 0;
    ANSWER = 1;
}

enum ActionType {
    START_ROOM = 0;
    END_ROOM = 1;
    JOIN = 2;
    LEAVE = 3;
    AUDIO = 4;
    VIDEO = 5;
    SUBTITLE = 6;
    DUB = 7;
}

// Event Type
enum EventType {
    ROOM_ACTIVE = 0;
    ROOM_INACTIVE = 1;
    JOIN_EVENT = 2;
    LEAVE_EVENT = 3;
    AUDIO_ON = 4;
    AUDIO_OFF = 5;
    VIDEO_ON = 6;
    VIDEO_OFF = 7;
}

// Peer Connection Type
enum PcType {
    PC_UNSPECIFIED = 0;
    PUB = 1;
    SUB = 2;
}

// Action
message Action {
    string roomid = 1;
    string peerid = 2;
    ActionType type = 3;
}

message Event {
    string roomid = 1;
    string peerid = 2;
    EventType type = 3;
}

// Session Description (SDP)
message Sdp {
    PcType pc = 1;
    SdpType type = 2;
    string sdp = 3;
}

//  Ice Candidate
message IceCandidate {
    PcType pc = 1;
    string candidate = 2;
    string sdp_mid = 3;
    uint32 sdp_mline_index = 4;
    string username_fragment = 5;
}

message PeerSignal {
    oneof payload {
        Sdp sdp = 1;
        IceCandidate ice = 2;
        Action action = 3;
        Event event = 4;
  }
}


service SFU {
    rpc Signal(stream PeerSignal) returns (stream PeerSignal);
}